Fix align items center for #game-bottom

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -184,6 +184,7 @@ label, input{
 #game-bottom {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 20%;
 }
